@@ -1,4 +1,3 @@
-{namespace this=Tx_Workspaces_ViewHelpers}
 <!-- ###FULLDOC### begin -->
 <div class="typo3-fullDoc">
 <!-- Page header with buttons, path details and csh -->
@@ -20,7 +19,7 @@
 <div id="typo3-docbody">
 <div id="typo3-inner-docbody">
 
-	<this:TempFlashMessageQueue />
+	<f:renderFlashMessages renderMode="div" />
 
 	<f:render partial="navigation" arguments="{workspaceList: workspaceList, activeWorkspaceUid: activeWorkspaceUid, showAllWorkspaceTab:showAllWorkspaceTab}" />
 	<div class="typo3-dyntabmenu-divs"><f:render section="main" /></div>
