@@ -1,10 +1,9 @@
-{namespace this=Tx_Workspaces_ViewHelpers}
 <div class="typo3-noDoc">
 	<!-- Content of module, for instance listing, info or editing -->
 	<div id="typo3-docbody">
 		<div id="typo3-inner-docbody">
 
-			<this:TempFlashMessageQueue />
+			<f:renderFlashMessages renderMode="div" />
 
 			<f:render section="main"/>
 		</div>
